[bug]#4511 fixtext alignment on homepage notifications

--- a/assets/themes/leo/css/modules.less
+++ b/assets/themes/leo/css/modules.less
@@ -1790,6 +1790,8 @@ article.list-view{
 	}
 	.content{
 		padding: 0;
+		float: left;
+		width: 85%;
 	}
 }
 
