--- a/assets/themes/leo/default/theme.css
+++ b/assets/themes/leo/default/theme.css
@@ -8669,6 +8669,8 @@ article.list-view {
 }
 .notification .content {
   padding: 0;
+  float: left;
+  width: 85%;
 }
 .toggle-panel {
   background: #4bafd5;
